--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -19,6 +19,13 @@
     object-fit: cover;
     filter: brightness(80%);
   }
+  .banner_housing {
+    width: 100%;
+    max-height: 255px;
+    border-radius: 10px;
+    object-fit: cover;
+    filter: brightness(80%);
+}
 
 @media (min-width: 600px) {
     .banner_text{
@@ -35,4 +42,7 @@
     .banner_image {
         max-height: 223px;
       }
+    .banner_housing {
+        max-height: 415px;
+    }
 }
