--- a/src/components/HousingCard/HousingCard.module.scss
+++ b/src/components/HousingCard/HousingCard.module.scss
@@ -7,7 +7,13 @@
     min-width: 255px;
     background-color: variables.$primary-color;
     margin: 11px 0;
-
+    box-shadow: inset 0px -90px 60px -50px rgba(0, 0, 0, 0.5);
+    img{
+        object-fit: cover;
+        height: 100%;
+        width: 100%;
+        border-radius: inherit;
+    }
 }
 @media (min-width: 875px) {
     .card{
