--- a/src/pages/Housing/Housing.module.scss
+++ b/src/pages/Housing/Housing.module.scss
@@ -2,3 +2,20 @@
     display: flex;
     margin: 5px 0;
 } 
+
+.host_details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px 0;
+}
+
+@media (min-width: 875px) {
+    .main_container {
+        display: flex;
+        justify-content: space-between;
+    }
+    .host_details {
+        flex-direction: column-reverse;
+    } 
+}
