--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -7,8 +7,9 @@ footer {
     left: 0px;
     width: 100%;
     background-color: black;
-    height: 210px;
+    height: 240px;
     color: white;
+    margin-top: 40px;
     .footer_text {
     font-size: 12px;
     width:130px;
