--- a/src/components/HousingCard/HousingCard.module.scss
+++ b/src/components/HousingCard/HousingCard.module.scss
@@ -1,23 +1,33 @@
-@use "../../styles/variables";
+
 
 .card {
     border-radius: 10px;
     height: 255px;
     width: 100%;
     min-width: 255px;
-    background-color: variables.$primary-color;
+    
     margin: 11px 0;
     box-shadow: inset 0px -90px 60px -50px rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: flex-end;
     position: relative;
+    cursor: pointer;
     img{
         object-fit: cover;
         height: 100%;
         width: 100%;
         border-radius: inherit;
     }
-    span {
+    .gradient {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+        border-radius: inherit;
+    }
+    h2 {
         position: absolute;
         display: block;
         width: 90%;
@@ -25,6 +35,7 @@
         letter-spacing: 1px;
         color: white;
         font-weight: 600;
+        font-size: 16px;
     }
 }
 @media (min-width: 875px) {
