--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,18 +12,25 @@ header {
 }
 ul {
     display: flex;
-    font-size: small;
-    li {
-        list-style-type: none;
-        a {
-            text-decoration: none;
-            margin-left: 20px;
-            color: variables.$primary-color;
-            font-weight: 500;
-            &:hover{
-                text-decoration: underline;
-            }
+  font-size: small;
+  
+  li {
+    list-style-type: none;
+    margin-left: 50px;
+
+    a {
+      color: variables.$primary-color;
+      text-decoration: none;
+      transition: text-decoration 0.3s ease;
+      
+      &:hover {
+        text-decoration: underline;
+      }
+      
+      &.active_link {
+        text-decoration: underline;
         }
+      }
     }
 }
 
