--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,24 +1,24 @@
 @use "../../styles/variables";
 
-header {
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 30px
-}
-.header_logo {
+    margin-bottom: 30px;
+    &__logo {
     width: 120px;
     cursor: pointer;
+  }
 }
-ul {
+
+.navlist {
     display: flex;
   font-size: small;
   
-  li {
+  &__item {
     list-style-type: none;
-    margin-left: 50px;
-
-    a {
+    margin-left: 10px;
+    &__link {
       color: variables.$primary-color;
       text-decoration: none;
       transition: text-decoration 0.3s ease;
@@ -36,25 +36,25 @@ ul {
 
 
 @media (min-width: 720px) {
-    .header_logo {
+    .header__logo {
         width:200px
     }
-    ul {
+    .navlist {
         font-size: 18px;
+        &__item {
+      margin-left: 40px;
     }
-    li {
-        margin-left: 40px;
-    }
+}
 }
 
 @media (min-width: 1024px) {
-    .header_logo {
+    .header__logo {
         width:270px
     }
-    ul {
+    .navlist {
         font-size: 24px;
+     &__item {
+      margin-left: 60px;
     }
-    li {
-        margin-left: 60px;
-    }
+}
 }
