--- a/src/components/Host/Host.module.scss
+++ b/src/components/Host/Host.module.scss
@@ -2,45 +2,48 @@
 
 .host{
     display: flex;
-}
-
-.host_name{
-    width: 70px;
-    text-align: end;
-    margin-right: 10px;
-    font-size: 12px;
-    font-weight: 500;
-    color: variables.$primary-color;
-    display: flex;
-    align-items: center;
-}
-
-.profile_pic{
-    width: 32px;
-    height: 32px;
-    background-color:#C4C4C4;
-    border-radius: 50%;
-    img{
+    &__name{
+        width: 70px;
+        text-align: end;
+        margin-right: 10px;
+        font-size: 12px;
+        font-weight: 500;
+        color: variables.$primary-color;
+        display: flex;
+        align-items: center;
+    }
+    &__picture{
         width: 32px;
         height: 32px;
+        background-color:#C4C4C4;
         border-radius: 50%;
+        &__image{
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+        }
     }
 }
+
+
+
 
 
 @media (min-width: 875px) {
-    .host_name{
-        width: 100px;
-        font-size: 18px;
-    }
-    
-    .profile_pic{
-        width: 64px;
-        height: 64px;
-    }
-    .profile_pic img{
-        width: 64px;
-        height: 64px;
-        border-radius: 50%;
+    .host{
+        &__name{
+            width: 100px;
+            font-size: 18px;
+        }
+        
+        &__picture{
+            width: 64px;
+            height: 64px;
+            &__image{
+                width: 64px;
+                height: 64px;
+                border-radius: 50%;
+            }
+        }
     }
 }
